new page to display

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <span class="text-primary">Dexter</span>
         </h1>
         <div class="subheading mb-5">4235 Pineview Ln N · Crystal, MN 55429 · (612) 590-3784 ·
-          <a href="mailto:name@email.com">kevin.j.dexter@gmail.com</a>
+          <a href="mailto:kevin.j.dexter@gmail.com">kevin.j.dexter@gmail.com</a>
         </div>
         <p class="mb-5">I am a Full-Stack Software Engineer with an interest in expanding my existing knowledge and looking to learn something
           new at every turn.</p>
