--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
           <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
         </li>
       </ul>
@@ -234,6 +237,44 @@
         </ul>
 
       </div>
+    </section>
+
+    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
+      <div class="resume-content my-auto">
+          <h3 class="mb-0">Realmoir</h3>
+            <a href="https://realmoir.herokuapp.com">realmoir.herokuapp.com</a>
+          <p>
+            A tool for use by aspiring authors to write down and track their notes, giving an efficient way to navigate
+            between related items, locate items both recent and old, and plenty of space to take notes. Offers the option 
+            to make content private or public, as to select whether everyone can see it or just the creator themselves.
+          </p>
+          <ul class="list-inline">
+            <li class="list-inline-item">
+              <img src="img/realmoir_1.png" width="500px" />
+            </li>
+            <li class="list-inline-item">
+              <img src="img/realmoir_2.png" width="500px" />
+            </li>
+            <li class="list-inline-item">
+              <img src="img/realmoir_3.png" width="500px" />
+            </li>
+          </ul>
+        </div>
+        <div class="resume-content my-auto">
+            <h3 class="mb-0">NPC Lives</h3>
+            <a href="https://npc-lives-rough.herokuapp.com">npc-lives.herokuapp.com</a>
+            <p>A web application meant to act as a board where individuals can go and imagine they play the role of an NPC in a 
+              board game or video game, giving voice to the gripes or excitement felt by the NPC's as they interact with player
+              characters in their daily lives.</p>
+            <ul class="list-inline">
+              <li class="list-inline-item">
+                <img src="img/npc_lives_1.png" width="500px" />
+              </li>
+              <li class="list-inline-item">
+                <img src="img/npc_lives_2.png" width="500px" />
+              </li>
+            </ul>
+          </div>
     </section>
 
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
